--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
              </div>
              <p class="small_paragraph_text">
               <span class="small_bold_paragraph_text">PriorAttire</span>
-                is creating YouTube videos on historical fashions, dressmaking etc.
+                is creating YouTube videos on historical fashions,etc.
               <span class="content_bottom_text">
                  <ion-icon name="heart-outline"></ion-icon> 515 Supporters
               </span>
